List templates names are now more flexible (pt. 3)